<resources>
    <string name="app_name">My Friend</string>
    <string name="being_technical_indian">being technical indian</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Error Messages-->
    <string name="error_internet">Please check your internet connection</string>
    <string name="something_went_wrong">Something went wrong</string>


    <string name="my_first_name_is">My first \nname is</string>
    <string name="continue_">Continue</string>
    <string name="skip">Skip</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="this_will_appear_on_your_profile">This will appear on your profile</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_email_id">Enter email-id</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="or">or</string>
    <string name="please_register_with_us_so_that_we_will_always_be_in_touch_with_you">Please register with us, so that we will always be in touch with you</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_confirm_password">Enter confirm password</string>
    <string name="forget_password">Forget password</string>
    <string name="i_am_a">I am a</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="based_on_your_interest_you_will_get_your_feed">Based on your interest, you will get your feed</string>

</resources>
