<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rounded_white"
    android:paddingHorizontal="@dimen/_10sdp"
    tools:context=".fragment.SignUpFragment">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/opensans_regular"
        android:gravity="center"
        android:text="@string/please_register_with_us_so_that_we_will_always_be_in_touch_with_you"
        android:textAlignment="viewStart"
        android:textColor="@color/colorBlack"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/numberSignUpTIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/opensans_regular"
        android:hint="@string/enter_mobile_number"
        app:layout_constraintStart_toStartOf="@id/tv_name"
        app:layout_constraintTop_toBottomOf="@id/tv_name">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--    <View-->
    <!--        android:id="@+id/view"-->
    <!--        android:layout_width="10dp"-->
    <!--        android:layout_height="1dp"-->
    <!--        android:background="@color/colorBlack"-->
    <!--        android:visibility="visible"-->
    <!--        android:layout_marginEnd="@dimen/_5sdp"-->
    <!--        app:layout_constraintEnd_toStartOf="@+id/orText"-->
    <!--        app:layout_constraintTop_toTopOf="@id/orText"-->
    <!--        app:layout_constraintBottom_toBottomOf="@id/orText"-->
    <!--        />-->

    <!--    <TextView-->
    <!--        android:id="@+id/orText"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="@dimen/_10sdp"-->
    <!--        android:textColor="@color/colorBlack"-->
    <!--        android:text="@string/or"-->
    <!--        android:textAlignment="center"-->
    <!--        android:textAllCaps="true"-->
    <!--        android:visibility="visible"-->
    <!--        android:textSize="14sp"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/numberSignUpTIL" />-->

    <!--    <View-->
    <!--        android:id="@+id/view2"-->
    <!--        android:layout_width="10dp"-->
    <!--        android:layout_height="1dp"-->
    <!--        android:background="@color/colorBlack"-->
    <!--        android:visibility="visible"-->
    <!--        android:layout_marginStart="@dimen/_5sdp"-->
    <!--        app:layout_constraintStart_toEndOf="@id/orText"-->
    <!--        app:layout_constraintTop_toTopOf="@id/orText"-->
    <!--        app:layout_constraintBottom_toBottomOf="@id/orText"-->
    <!--        />-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordSignUpTIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/opensans_regular"
        android:hint="@string/enter_password"
        app:layout_constraintStart_toStartOf="@id/numberSignUpTIL"
        app:layout_constraintTop_toBottomOf="@id/numberSignUpTIL">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPasswordSignUpTIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/opensans_regular"
        android:hint="@string/enter_confirm_password"
        app:layout_constraintStart_toStartOf="@id/passwordSignUpTIL"
        app:layout_constraintTop_toBottomOf="@id/passwordSignUpTIL">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/signUpBtn"
        style="@style/BlueRoundedCornerButton"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmPasswordSignUpTIL" />


</androidx.constraintlayout.widget.ConstraintLayout>