<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_curved_white"
    android:paddingHorizontal="@dimen/_10sdp">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/opensans_regular"
        android:gravity="center"
        android:text="@string/i_am_a"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />


    <RadioGroup
        android:id="@+id/genderRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="@dimen/_5sdp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name">

        <RadioButton
            android:id="@+id/rdo1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:layout_weight="0.5"
            android:background="@drawable/layout_selected_radio_gender"
            android:button="@null"
            android:drawableTop="@drawable/men_icon"
            android:elevation="@dimen/_2sdp"
            android:fontFamily="@font/opensans_bold"
            android:padding="@dimen/_5sdp"
            android:text="@string/male"
            android:textAlignment="center"
            android:textColor="@drawable/layout_selected_gender_button_text_color"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/rdo2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:layout_weight="0.5"
            android:background="@drawable/layout_selected_radio_gender"
            android:button="@null"
            android:drawableTop="@drawable/woman_icon"
            android:elevation="@dimen/_2sdp"
            android:fontFamily="@font/opensans_bold"
            android:padding="@dimen/_5sdp"
            android:text="@string/female"
            android:textAlignment="center"
            android:textColor="@drawable/layout_selected_gender_button_text_color"
            android:textSize="14sp" />
    </RadioGroup>


    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/genderRadioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>