<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rounded_white"
    android:paddingHorizontal="@dimen/_10sdp"
    tools:context=".fragment.LoginFragment">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/opensans_regular"
        android:gravity="center"
        android:text="Please login to your registered phone number or email-id"
        android:textAlignment="viewStart"
        android:textColor="@color/colorBlack"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneNumberTIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/opensans_regular"
        android:hint="@string/enter_mobile_number"
        app:layout_constraintStart_toStartOf="@id/tv_name"
        app:layout_constraintTop_toBottomOf="@id/tv_name">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

<!--    <View-->
<!--        android:id="@+id/view"-->
<!--        android:layout_width="10dp"-->
<!--        android:layout_height="1dp"-->
<!--        android:layout_marginEnd="@dimen/_5sdp"-->
<!--        android:background="@color/colorBlack"-->
<!--        android:visibility="visible"-->
<!--        app:layout_constraintBottom_toBottomOf="@id/orText"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/orText"-->
<!--        app:layout_constraintTop_toTopOf="@id/orText" />-->

<!--    <TextView-->
<!--        android:id="@+id/orText"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="@dimen/_10sdp"-->
<!--        android:text="@string/or"-->
<!--        android:textAlignment="center"-->
<!--        android:textAllCaps="true"-->
<!--        android:textColor="@color/colorBlack"-->
<!--        android:textSize="14sp"-->
<!--        android:visibility="visible"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/phoneNumberTIL" />-->

<!--    <View-->
<!--        android:id="@+id/view2"-->
<!--        android:layout_width="10dp"-->
<!--        android:layout_height="1dp"-->
<!--        android:layout_marginStart="@dimen/_5sdp"-->
<!--        android:background="@color/colorBlack"-->
<!--        android:visibility="visible"-->
<!--        app:layout_constraintBottom_toBottomOf="@id/orText"-->
<!--        app:layout_constraintStart_toEndOf="@id/orText"-->
<!--        app:layout_constraintTop_toTopOf="@id/orText" />-->


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/opensans_regular"
        android:hint="@string/enter_password"
        app:layout_constraintStart_toStartOf="@id/phoneNumberTIL"
        app:layout_constraintTop_toBottomOf="@id/phoneNumberTIL">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginBtn"
        style="@style/BlueRoundedCornerButton"
        android:text="@string/login"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordTIL" />

    <TextView
        android:id="@+id/forgetPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/opensans_regular"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:text="@string/forget_password"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginBtn"
        android:layout_marginBottom="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="RtlCompat" />



</androidx.constraintlayout.widget.ConstraintLayout>